correction contrast
titre en blanc

--- a/style.css
+++ b/style.css
@@ -31,12 +31,7 @@ body {
     text-align: center;
     font-size: 24px;
     font-weight: 900;
-<<<<<<< HEAD
     color:  white !important;
-=======
-    color:  #dca122 !important;
->>>>>>> main
-
 }
 
 .partenaire_footer{
